feat: Add comprehensive Linux kernel debugging and development toolchain
This commit adds a complete Linux kernel debugging and development toolchain research project including:

## New Features:
- **KGDB Debugging**: Complete KGDB setup and usage guide with QEMU integration
- **ftrace Tracing**: Comprehensive ftrace framework documentation and examples
- **Performance Analysis**: perf tool usage guide with CPU, memory, and I/O analysis
- **Static Analysis**: Sparse static analyzer configuration and best practices
- **Build Environment**: Automated kernel compilation environment setup
- **Utility Scripts**: Automated kernel build helper scripts
- **Documentation**: Complete debugging guide and best practices

## Directory Structure:
- : KGDB, ftrace, crash analysis, dynamic debugging
- : Sparse, Coccinelle, Clang analyzer, checkpatch
- : perf, eBPF, SystemTap, flame graphs
- : Kernel build, QEMU setup, cross-compile, Docker env
- : Build scripts, test scripts, analysis scripts, automation
- : Technical documentation and guides

## Key Components:
1. **Automated Build System**: Complete Makefile with dependency management
2. **QEMU Debug Environment**: Ready-to-use QEMU debugging setup
3. **Performance Analysis Tools**: Integrated perf, ftrace, and eBPF workflows
4. **Static Code Analysis**: Comprehensive Sparse integration
5. **Development Scripts**: Automated kernel build and configuration helpers

This toolchain provides a complete solution for Linux kernel development, debugging, and performance analysis, suitable for both beginners and advanced kernel developers.

--- a/projects/Makefile
+++ b/projects/Makefile
@@ -62,6 +62,35 @@ performance:
 security:
 	$(MAKE) -C $(KERNEL_DIR) M=$(PWD)/内核安全 modules
 
+toolchain:
+	$(MAKE) -C 内核工具链
+
+# 设置调试工具链
+setup-toolchain:
+	$(MAKE) -C 内核工具链 install
+
+# 帮助信息
+help:
+	@echo "Linux内核研究项目构建系统"
+	@echo "=========================="
+	@echo ""
+	@echo "可用目标:"
+	@echo "  all           - 编译所有内核模块"
+	@echo "  memory        - 编译内存管理模块"
+	@echo "  scheduler     - 编译进程调度模块"
+	@echo "  network       - 编译网络子系统模块"
+	@echo "  filesystem    - 编译文件系统模块"
+	@echo "  driver        - 编译设备驱动模块"
+	@echo "  performance   - 编译性能分析模块"
+	@echo "  security      - 编译安全机制模块"
+	@echo "  toolchain     - 设置内核工具链"
+	@echo "  setup-toolchain - 安装和配置调试工具链"
+	@echo "  install       - 安装所有模块"
+	@echo "  clean         - 清理编译文件"
+	@echo "  help          - 显示此帮助信息"
+
+.PHONY: all modules clean install memory scheduler network filesystem driver performance security toolchain setup-toolchain help
+
 tools:
 	$(MAKE) -C $(KERNEL_DIR) M=$(PWD)/内核工具链 modules
 
