Revert "Transform repository from Linux kernel research to AI Agent research"
This reverts commit 0731f95053a249086774211b4ec8e550e89e65f7.

--- a/projects/projects.json
+++ b/projects/projects.json
@@ -1,90 +1,90 @@
 [
   {
     "id": 1,
-    "title": "AI Agent框架与技术栈研究",
-    "description": "深入研究主流AI Agent框架，包括LangChain、CrewAI、AutoGPT、LangGraph等，分析其架构设计、技术特点和适用场景。",
-    "category": "AI框架研究",
+    "title": "Linux内核内存管理子系统研究",
+    "description": "深入研究Linux内核内存管理机制，包括页面分配器、slab分配器、虚拟内存管理、内存回收等核心技术，为内核开发提供深度理解。",
+    "category": "内核内存管理",
     "year": 2024,
-    "tags": ["AI Agent", "LangChain", "CrewAI", "AutoGPT", "框架对比"],
-    "image": "🤖",
-    "folder": "AI框架研究",
-    "details": "AI Agent框架研究项目专注于分析和对比主流的AI Agent开发框架。我们深入研究了各种框架的技术特点：\n\n主要研究成果：\n• LangChain生态系统的组件架构和工具链分析\n• CrewAI多智能体协作机制的设计原理\n• AutoGPT自主任务执行的实现方式\n• LangGraph状态机和工作流编排技术\n\n技术特点：\n• 框架性能基准测试和对比分析\n• 不同场景下的框架选择策略\n• 自定义Agent组件的开发模式\n• 企业级部署的最佳实践"
+    "tags": ["Linux内核", "内存管理", "页面分配", "虚拟内存", "内核开发"],
+    "image": "🧠",
+    "folder": "内核内存管理",
+    "details": "Linux内核内存管理研究项目专注于内核级内存管理的核心技术。我们深入研究了Linux内核的内存子系统：\n\n主要研究成果：\n• 分析了buddy算法和页面分配器的实现机制\n• 研究了slab/slub/slob分配器的设计原理\n• 深入理解了虚拟内存管理和页表机制\n• 探索了内存回收算法(LRU、kswapd等)\n\n技术特点：\n• 内核源码级别的深度分析\n• 内存管理性能优化策略\n• 内存泄漏和内存碎片问题研究\n• 多架构内存管理差异分析"
   },
   {
     "id": 2,
-    "title": "多智能体系统架构与协作机制研究",
-    "description": "探索多智能体系统的架构模式、通信协议、任务分配和协作机制，研究分布式AI系统的设计原理和实现方法。",
-    "category": "多智能体系统",
+    "title": "Linux内核进程调度与同步机制研究",
+    "description": "探索Linux内核进程调度算法、同步原语、锁机制等核心技术，深入理解CFS调度器、RCU、自旋锁等关键实现。",
+    "category": "进程调度",
     "year": 2024,
-    "tags": ["多智能体", "分布式AI", "协作机制", "任务分配", "通信协议"],
-    "image": "🔗",
-    "folder": "多智能体系统",
-    "details": "多智能体系统研究项目深入探索了分布式AI系统的核心技术。我们基于最新的研究成果，分析了多种协作模式：\n\n核心研究内容：\n• 层次化多智能体架构的设计模式\n• 智能体间通信协议和消息传递机制\n• 动态任务分配和负载均衡算法\n• 分布式决策和共识机制的实现\n\n技术贡献：\n• 开发了多智能体协调框架\n• 实现了高效的任务调度算法\n• 研究了容错和故障恢复机制\n• 在复杂场景中验证了协作效果"
+    "tags": ["Linux内核", "进程调度", "CFS", "同步机制", "锁机制"],
+    "image": "⚙️",
+    "folder": "进程调度",
+    "details": "Linux内核进程调度研究项目深入探索了内核的调度和同步机制。我们基于最新的内核版本，分析了多种调度算法：\n\n核心研究内容：\n• CFS(完全公平调度器)的实现原理和优化\n• 实时调度器(RT)和截止时间调度器(DL)\n• RCU(读-复制-更新)同步机制的深度分析\n• 自旋锁、互斥锁、信号量等同步原语\n\n技术贡献：\n• 开发了调度器性能分析工具\n• 实现了自定义调度策略的内核模块\n• 研究了多核环境下的负载均衡\n• 在高并发场景中验证了调度效果"
   },
   {
     "id": 3,
-    "title": "AI Agent记忆与推理系统研究",
-    "description": "研究AI Agent的记忆机制、推理能力和知识管理，包括长短期记忆、向量数据库、知识图谱等核心技术。",
-    "category": "记忆推理系统",
+    "title": "Linux内核网络子系统与协议栈研究",
+    "description": "研究Linux内核网络子系统，包括套接字层、协议栈实现、网络设备驱动、流量控制等，探索高性能网络编程技术。",
+    "category": "网络子系统",
     "year": 2024,
-    "tags": ["AI记忆", "推理系统", "向量数据库", "知识图谱", "RAG"],
-    "image": "🧠",
-    "folder": "记忆推理系统",
-    "details": "AI Agent记忆推理研究项目专注于智能体的认知能力提升。我们深入研究了记忆和推理系统的内部机制：\n\n高级特性实现：\n• 长短期记忆的存储和检索机制\n• 向量数据库的嵌入和相似性搜索\n• 知识图谱的构建和推理算法\n• RAG(检索增强生成)的优化策略\n\n技术亮点：\n• 开发了高效的记忆管理系统\n• 实现了多模态知识融合技术\n• 研究了因果推理和逻辑推理\n• 在复杂任务中验证了推理能力"
+    "tags": ["Linux内核", "网络协议栈", "套接字", "网络驱动", "流量控制"],
+    "image": "🌐",
+    "folder": "网络子系统",
+    "details": "Linux内核网络子系统研究项目专注于内核网络栈的高级特性和性能优化。我们深入研究了网络子系统的内部机制：\n\n高级特性实现：\n• TCP/IP协议栈的内核实现分析\n• 套接字缓冲区(sk_buff)的设计原理\n• 网络设备驱动程序的开发模式\n• Netfilter框架和iptables的实现\n\n技术亮点：\n• 开发了高性能的网络模块\n• 实现了零拷贝网络传输优化\n• 研究了DPDK与内核网络栈的集成\n• 在高吞吐量场景中验证了性能提升"
   },
   {
     "id": 4,
-    "title": "AI Agent规划与执行引擎研究",
-    "description": "深入研究AI Agent的任务规划、执行策略和工具调用机制，包括计划生成、动作执行、错误处理等核心功能。",
-    "category": "规划执行引擎",
+    "title": "Linux内核文件系统与存储子系统研究",
+    "description": "深入研究Linux内核文件系统实现，包括VFS层、ext4/btrfs/xfs文件系统、块设备层、I/O调度等存储相关技术。",
+    "category": "文件系统",
     "year": 2024,
-    "tags": ["任务规划", "执行引擎", "工具调用", "动作序列", "错误处理"],
-    "image": "⚡",
-    "folder": "规划执行引擎",
-    "details": "AI Agent规划执行研究项目专注于智能体的行动能力。我们开发了完整的规划执行框架：\n\n核心功能特性：\n• 分层任务规划和子目标分解\n• 动态执行策略和实时调整机制\n• 工具调用和API集成的标准化\n• 错误检测和自动恢复系统\n\n技术架构：\n• 模块化的执行引擎设计\n• 可扩展的工具插件系统\n• 执行状态监控和日志记录\n• 支持多种执行环境和平台"
+    "tags": ["Linux内核", "文件系统", "VFS", "块设备", "I/O调度"],
+    "image": "💾",
+    "folder": "文件系统",
+    "details": "Linux内核文件系统研究项目专注于存储子系统的核心技术。我们开发了完整的文件系统分析工具链：\n\n核心功能特性：\n• VFS(虚拟文件系统)层的抽象机制\n• ext4文件系统的日志和元数据管理\n• btrfs的写时复制和快照功能\n• 块设备层和I/O调度算法分析\n\n技术架构：\n• 模块化的文件系统驱动开发\n• 缓存管理和页面回写机制\n• 文件系统性能优化和调试\n• 支持多种存储设备类型"
   },
   {
     "id": 5,
-    "title": "AI Agent企业级应用与部署研究",
-    "description": "研究AI Agent在企业环境中的应用场景、部署策略和运维管理，包括客服机器人、代码助手、业务流程自动化等。",
-    "category": "企业应用",
+    "title": "Linux内核设备驱动程序开发研究",
+    "description": "研究Linux内核设备驱动程序开发技术，包括字符设备、块设备、网络设备驱动，以及设备树、中断处理等核心机制。",
+    "category": "设备驱动",
     "year": 2024,
-    "tags": ["企业应用", "客服机器人", "代码助手", "流程自动化", "部署运维"],
-    "image": "🏢",
-    "folder": "企业应用",
-    "details": "AI Agent企业应用研究项目专注于智能体在商业环境中的实际应用。我们深入研究了企业级部署的关键技术：\n\n应用场景分析：\n• 智能客服和用户支持系统\n• 代码生成和软件开发助手\n• 业务流程自动化和决策支持\n• 文档处理和知识管理系统\n\n技术实现：\n• 企业级安全和权限管理\n• 高可用性和负载均衡架构\n• 监控告警和性能优化\n• 与现有系统的集成方案"
+    "tags": ["Linux内核", "设备驱动", "字符设备", "块设备", "中断处理"],
+    "image": "🔌",
+    "folder": "设备驱动",
+    "details": "Linux内核设备驱动研究项目探索了内核与硬件交互的核心技术。我们实现了完整的驱动程序开发框架：\n\n驱动开发技术：\n• 字符设备驱动的开发模式和接口设计\n• 块设备驱动的I/O请求处理机制\n• 网络设备驱动的数据包处理流程\n• 设备树(Device Tree)的解析和使用\n\n技术突破：\n• 开发了通用的驱动程序框架\n• 实现了高效的中断处理机制\n• 解决了DMA和内存映射问题\n• 支持多种硬件平台和架构"
   },
   {
     "id": 6,
-    "title": "AI Agent安全与隐私保护研究",
-    "description": "建立AI Agent安全防护体系，研究智能体在数据安全、隐私保护、对抗攻击等方面的防护机制和最佳实践。",
-    "category": "安全隐私",
+    "title": "Linux内核性能分析与优化研究",
+    "description": "建立Linux内核性能分析体系，研究内核在CPU调度、内存管理、I/O处理等方面的性能瓶颈和优化策略。",
+    "category": "内核性能",
     "year": 2024,
-    "tags": ["AI安全", "隐私保护", "对抗攻击", "数据安全", "安全防护"],
-    "image": "🛡️",
-    "folder": "安全隐私",
-    "details": "AI Agent安全研究项目建立了全面的智能体安全防护体系。我们开发了多层次的安全保障机制：\n\n安全防护体系：\n• 输入验证和注入攻击防护\n• 模型安全和对抗样本检测\n• 数据隐私和敏感信息保护\n• 访问控制和身份认证机制\n\n技术实现：\n• 基于零信任架构的安全设计\n• 联邦学习和差分隐私技术\n• 安全审计和合规性检查\n• 实时威胁检测和响应系统"
+    "tags": ["Linux内核", "性能分析", "性能优化", "基准测试", "瓶颈分析"],
+    "image": "📈",
+    "folder": "内核性能",
+    "details": "Linux内核性能研究项目建立了科学的内核性能评估体系。我们开发了全面的内核性能分析框架：\n\n分析体系：\n• 内核函数调用链的性能分析\n• 内存分配和回收的性能测试\n• I/O子系统的吞吐量和延迟分析\n• 多核环境下的扩展性测试\n\n技术实现：\n• 基于ftrace和perf的分析工具\n• 内核热点函数的性能优化\n• 锁竞争和缓存失效的检测\n• 实时性能监控和告警机制"
   },
   {
     "id": 7,
-    "title": "AI Agent性能优化与监控研究",
-    "description": "研究AI Agent系统的性能优化策略，包括推理加速、资源管理、负载均衡等，建立完整的监控和调优体系。",
-    "category": "性能优化",
+    "title": "Linux内核安全机制与漏洞研究",
+    "description": "研究Linux内核安全机制，包括权限控制、内存保护、安全模块(LSM)、漏洞分析等，建立内核安全防护体系。",
+    "category": "内核安全",
     "year": 2024,
-    "tags": ["性能优化", "推理加速", "资源管理", "负载均衡", "监控调优"],
-    "image": "📈",
-    "folder": "性能优化",
-    "details": "AI Agent性能研究项目建立了科学的智能体性能评估和优化体系。我们开发了全面的性能分析框架：\n\n优化策略：\n• 模型推理加速和量化技术\n• 内存管理和缓存优化策略\n• 并发处理和异步执行机制\n• 分布式部署和负载均衡\n\n技术实现：\n• 基于GPU/TPU的加速计算\n• 智能体性能基准测试工具\n• 实时监控和自动扩缩容\n• 性能瓶颈分析和调优建议"
+    "tags": ["Linux内核", "内核安全", "权限控制", "内存保护", "漏洞分析"],
+    "image": "🛡️",
+    "folder": "内核安全",
+    "details": "Linux内核安全研究项目专注于内核级安全机制和漏洞防护。我们建立了完整的内核安全分析框架：\n\n安全机制：\n• 用户态和内核态的权限隔离\n• SMEP/SMAP等硬件安全特性\n• LSM(Linux Security Modules)框架\n• 内核地址空间布局随机化(KASLR)\n\n技术贡献：\n• 开发了内核漏洞检测工具\n• 建立了内核安全编码规范\n• 实现了运行时安全检查机制\n• 在多个内核版本中验证了安全效果"
   },
   {
     "id": 8,
-    "title": "AI Agent开发工具链与生态研究",
-    "description": "研究AI Agent开发工具链，包括调试工具、测试框架、部署平台等，建立完整的开发生态和最佳实践。",
-    "category": "开发工具链",
+    "title": "Linux内核调试与开发工具链研究",
+    "description": "研究Linux内核调试技术和开发工具链，包括内核调试器、静态分析工具、内核模块开发等，提升内核开发效率。",
+    "category": "内核工具链",
     "year": 2024,
-    "tags": ["开发工具", "调试测试", "部署平台", "开发生态", "最佳实践"],
+    "tags": ["Linux内核", "内核调试", "开发工具", "静态分析", "内核模块"],
     "image": "🔧",
-    "folder": "开发工具链",
-    "details": "AI Agent工具链研究项目专注于提升智能体开发和部署体验。我们开发了完整的Agent开发工具链：\n\n工具特性：\n• 可视化Agent设计和调试工具\n• 自动化测试和质量保证框架\n• 一键部署和持续集成平台\n• 性能分析和错误诊断工具\n\n技术架构：\n• 模块化的开发环境和IDE插件\n• 标准化的Agent接口和协议\n• 云原生的部署和运维平台\n• 社区驱动的组件和模板库"
+    "folder": "内核工具链",
+    "details": "Linux内核工具链研究项目专注于提升内核开发和调试体验。我们开发了完整的内核开发工具链：\n\n工具特性：\n• KGDB/KDB内核调试器的使用和扩展\n• Sparse、Coccinelle等静态分析工具\n• 内核模块的动态加载和调试\n• 内核崩溃转储(kdump)分析工具\n\n技术架构：\n• 模块化的内核开发环境\n• 自动化的内核构建和测试\n• 内核代码质量检查工具\n• 支持多种调试和分析场景"
   }
 ]
